@@ -15,7 +15,11 @@
 	        "line_tail": "Line Tail",
 	        "line_thin": "Line Thin",
 	        "line_wide": "Line Wide"
+		},
+		"split_id": "Band #{@id}",
+		"notes": {
+			"full": "{@id}\n{@frequency} Hz\n{@note}{@octave}{@cents}",
+			"unknown": "{@id}\n{@frequency} Hz"
 		}
 	}
 }
-
