@@ -4,6 +4,7 @@
 
 === 1.0.5 ===
 * Implemented automatic scale of spectrum graph switch.
+* Implemented split frequency display.
 
 === 1.0.4 ===
 * Fixed bug for invalid processing of large buffer sizes.
